infra/k8s/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-depl
  template:
    metadata:
      labels:
        app: gateway-depl
    spec:
      containers:
        - name: gateway-depl
          image: sarthakm96/apigateway
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-srv
spec: 
  type: ClusterIP
  selector:
    app: gateway-depl
  ports:
    - name: gateway-srv
      protocol: TCP
      port: 3006
      targetPort: 3006
