infra/k8s/nats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats:latest
          ports:
            - containerPort: 4222
            - containerPort: 6222
          volumeMounts:
            - name: nats-data
              mountPath: /data
      volumes:
        - name: nats-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: nats
spec:
  ports:
    - name: nats
      protocol: TCP
      port: 4222
      targetPort: 4222
    # - name: nats
    #   port: 6222
    #   targetPort: 6222
    #   protocol: TCP
  selector:
    app: nats
  type: ClusterIP
